# tensor_sheet

./: CMakeLists.txt  LICENSE  README.md  gen_data.py
include/: arena.h  input.h  loader.h  tensor.h  tui.h
src/: arena.cpp  loader.cpp  main.cpp  tensor.cpp  tui.cpp
